googleVis 0.4.7 [2013-11-10]
----------------------------

Changes

* New option 'googleVis.viewer' which controls the default output of
  the googleVis plot method. On package load it is set to 
  getOption("viewer"). It you use RStudio, then its viewer pane will 
  be used for displaying non-Flash charts. 
  Set options("googleVis.viewer"=NULL) and the googleVis
  plot function will open all output in the default browser again.

* The package startup message makes the user aware of the default 
  viewer option.


googleVis 0.4.6 [2013-11-03]
----------------------------

Changes

* googleVis will use the Viewer pane in RStudio (version >= 0.98.441) 
  to display non-Flash charts by default. The setting is controlled
  via the option viewer. Set options("viewer"=NULL) and the googleVis
  plot function will open all output in the default browser again.

googleVis 0.4.5 [2013-08-29]
----------------------------

Bug Fixes

* The indentation of some of the HTML output changed in version 0.4.4,
  which as a result stopped googleVis output to be rendered with knitr.

googleVis 0.4.4 [2013-08-23]
----------------------------

NEW FEATURES

* gvisTable() gained new parameter formats, which allow users to 
  specify the format of numbers displayed in a table. 
  Thanks to Jacqueline Buros for providing ideas and code.

* Doughnut charts are now possible as pie charts with a hole.

Changes

* New examples for gvisBarChart, gvisColumnChart, gvisComboChart 
  demonstrating how to change the width of bars

* Extended FAQ section


googleVis 0.4.3 [2013-05-25]
----------------------------

NEW FEATURES
 
 * givsGeoChart has a new argument 'hovervar' to specify a column in
   input data that can be used to show additional information in a geo
   chart. See the new example of plotting countries' credit rating in
   the help file for a use case. Thanks to John Muschelli for suggesting
   this feature.


googleVis 0.4.2 [2013-03-16]
----------------------------

NEW FEATURES
