@@ -1,8 +1,8 @@
 Package: googleVis
 Type: Package
 Title: Interface between R and the Google Chart Tools
-Version: 0.4.7
-Date: 2013-11-10
+Version: 0.4.8
+Date: 2013-11-30
 Authors@R: c(person("Markus", "Gesmann", role = c("aut", "cre"),
                      email = "markus.gesmann@googlemail.com"),
             person("Diego", "de Castillo", role = "aut",
