@@ -517,7 +517,7 @@ gvis-object:
 plot.gvis("/Users/JoeBloggs/myGoogleVisChart.html")
 @ 
 
-Please note that this feature of \texttt{plot.gis} was introduced
+Please note that this feature of \texttt{plot.gvis} was introduced
 to \googleVis  with version 0.3.2.
 
 \subsection{Setting default behaviour of \texttt{print.gvis} and
@@ -1245,6 +1245,7 @@ to display non-Flash charts by default. Flash charts and merged gvis-objects are
 displayed in the default browser. The setting is controlled
 via the option \texttt{googleVis.viewer}. By default it will have
 the value of \texttt{getOption("viewer")}.
+
 Set \texttt{options("googleVis.viewer"=NULL)} and the googleVis
 plot function will open all output in the standard browser.
 
