@@ -1,3 +1,11 @@
+googleVis 0.4.8 [2013-11-30]
+----------------------------
+
+NEW FEATURES
+
+* Tooltips and roles 
+
+
 googleVis 0.4.7 [2013-11-10]
 ----------------------------
 
